prevent logo from stretching

--- a/static/elhefe/custom.css
+++ b/static/elhefe/custom.css
@@ -105,3 +105,7 @@ button.sc-jAaTju.dirHKA {
 body ::selection {
     background: #ffdb779e!important;
 }
+
+.Sidebar-m__logo___30ARy img {
+    height: auto;
+}
